--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,33 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.41'
+    ext.versions = [:]
+
+    versions.compileSdk = 28
+    versions.minSdk = 16
+    versions.targetSdk = 28
+
+    versions.gradle = '3.4.1'
+    versions.kotlin = '1.3.41'
+
+    versions.androidx = '1.0.2'
+    versions.constraint_layout = '1.1.3'
+    versions.support_library = '1.0.0'
+    versions.dagger = '2.21'
+    versions.room = '2.0.0'
+
+    versions.junit = '4.12'
+    versions.runner = '1.2.0'
+    versions.espresso = '3.2.0'
+
     repositories {
         google()
         jcenter()
-        
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.android.tools.build:gradle:$versions.gradle"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -19,7 +37,6 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
     }
 }
 
