--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
     versions.support_library = '1.0.0'
     versions.dagger = '2.21'
     versions.room = '2.0.0'
+    versions.lifecycle = '2.0.0'
 
     versions.junit = '4.12'
     versions.runner = '1.2.0'
