--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,12 @@ buildscript {
     versions.kotlin = '1.3.41'
 
     versions.androidx = '1.0.2'
+    versions.androidx_arch = '2.0.0'
     versions.constraint_layout = '1.1.3'
     versions.support_library = '1.0.0'
     versions.dagger = '2.21'
-    versions.room = '2.0.0'
-    versions.lifecycle = '2.0.0'
+    versions.room = '2.1.0'
+    versions.lifecycle = '2.1.0-alpha04'
 
     versions.junit = '4.12'
     versions.runner = '1.2.0'
