--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ buildscript {
     versions.dagger = '2.21'
     versions.room = '2.1.0'
     versions.lifecycle = '2.1.0-alpha04'
+    versions.lifecycle_viewmodel_ktx = '2.2.0-alpha02'
+    versions.coroutines = '1.3.0-M1'
 
     versions.junit = '4.12'
     versions.runner = '1.2.0'
